cabal-version:      2.4
name:               CoffeeTime
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:
maintainer:

-- A copyright notice.
-- copyright:
category:           Game
extra-source-files: CHANGELOG.md

executable CoffeeTime
    main-is:          Adventure.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Actions, Parsing, SaveRW, World
    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, haskeline ^>=0.8.2, QuickCheck ^>=2.14.2
    hs-source-dirs:   app
    default-language: Haskell2010

executable Tests
    main-is:          Tests.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Actions, Parsing, SaveRW, World
    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, haskeline ^>=0.8.2, QuickCheck ^>=2.14.2, directory
    hs-source-dirs:   app
    default-language: Haskell2010